Update: Compose Screenshot plugin to 0.0.1-alpha16 (#206)
The old coverage workaround shadowed the plugin's internal Renderer class to give it a classloader that resolved Kover's classes as resources. alpha16's own Renderer now does that natively, but it also hardened the render sandbox with a package allowlist that rejects any other class outright, which now blocks Kover's coverage runtime classes with NoClassDefFoundError. Replaced the shadow copy with a JVM agent that extends that allowlist directly.